--- a/style.css
+++ b/style.css
@@ -1,7 +1,27 @@
-body {
-    background-color: brown;
+*{
+    margin: 0;
+    padding: 0;
+}
+.inicio-pagina{
+    background-color: rgb(0, 55, 156);
+    color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: space-between;
+   
 }
 
 .imagem-logo{
-width: 30%;
+width: 15%;
+margin: 0 70px;
+}
+
+.itens-lateral {
+    display: inline-block;
+    margin: 0 11px; 
+    padding: 30px 0;
+}
+
+.buscar{
+    display: inline-block;
+    margin: 0 11px; 
 }
