--- a/style.css
+++ b/style.css
@@ -19,9 +19,14 @@ width: 13%;
     display: inline-block;
     margin: 0 11px; 
     padding: 20px 0;
+    font-size: larger;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .buscar{
     display: inline-block;
-    margin: 0 11px; 
+    margin: 0 11px;
+    padding: 20px 0; 
+    font-size: larger;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
