--- a/style.css
+++ b/style.css
@@ -6,13 +6,16 @@
     background-color: #001336;
     color: #47C5FB;
     display: flex;
+    height: 80px;
  justify-content: space-around;
     align-items: center;
    
 }
 
 .imagem-logo{
-width: 13%;
+width: 10%;
+height: 80px;
+object-fit: cover;
 }
 
 .itens-lateral {
@@ -29,4 +32,16 @@ width: 13%;
     padding: 20px 0; 
     font-size: larger;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.pagina{
+    color: #001336;
+}
+
+.titulo1{
+    font-size: xx-large;
+    color: black;
+    font-family: cursive;
+    display: flex;
+    align-items: center;
 }
